--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -68,11 +68,46 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button_signIn_signIn"
+        android:layout_above="@+id/button_signin"
         android:layout_marginBottom="15dp"
         android:layout_alignParentRight="true"
         android:id="@+id/text_forgot"
         style="@style/second_plan_text"
         android:onClick="forgotPassword"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_above="@+id/internal_relativelayout"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/button_signin"
+        style="@style/button_signin"
+        android:gravity="center"
+        android:onClick="signIn"
+        android:text="@string/sign_in"
+        android:textStyle="bold"
+        android:textSize="15dp"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/internal_relativelayout">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="2dp"
+            android:id="@+id/textview_newuser"
+            style="@style/second_plan__blue_text" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/textview_newuser"
+            android:layout_marginLeft="2dp"
+            style="@style/second_plan_text"
+            android:onClick="goToSignUp"/>
+    </RelativeLayout>
 </RelativeLayout>
