--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,5 +26,8 @@
         <item name="android:windowBackground">@drawable/background_splash</item>
     </style>
 
+    <style name="MyTheme" parent="Theme.AppCompat">
+        <item name="android:colorBackground">@color/colorWhite</item>
+    </style>
 
 </resources>
