--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,7 @@
         <item name="android:colorBackground">@color/colorWhite</item>
     </style>
 
+    <style name="edittext_blue">
+        <item name="android:backgroundTint">@color/colorBlue</item>
+    </style>
 </resources>
