All snackbars in app/src/main/java/com/example/ActivitySignIn.java work.

--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -74,7 +74,8 @@
         android:layout_alignParentRight="true"
         android:id="@+id/text_forgot"
         style="@style/second_plan_text"
-        android:onClick="forgotPasswordClicked"/>
+        android:onClick="forgotPasswordClicked"
+        android:text="@string/forgot_password"/>
 
     <Button
         android:layout_width="match_parent"
