--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,87 +8,109 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:id="@+id/icon_signin"
+        android:id="@+id/icon_signup"
         android:background="@mipmap/ic_launcher" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:layout_below="@id/icon_signin"
+        android:layout_below="@id/icon_signup"
         android:layout_marginTop="10dp"
         android:id="@+id/text_welcome"
         style="@style/foreground_text"
-        android:text="@string/welcome_back"/>
+        android:text="@string/welcome"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_welcome"
         android:layout_marginTop="5dp"
-        android:id="@+id/text_below_welcome_signin"
+        android:id="@+id/text_below_welcome_signup"
         style="@style/second_plan_text"
-        android:text="@string/sign_in_to_continue"/>
+        android:text="@string/sign_up_to_continue"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/edittext_login_signin"
+        android:layout_above="@+id/edittext_login_signup"
         android:layout_marginBottom="3dp"
         android:layout_marginLeft="4dp"
-        android:id="@+id/text_login_signin"
+        android:id="@+id/textView_login_signUp"
         style="@style/second_plan_text"
         android:text="@string/login"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_above="@+id/text_password_signin"
+        android:layout_above="@+id/textview_email_signup"
         android:layout_marginBottom="7dp"
-        android:id="@+id/edittext_login_signin"
-        style="@style/edittext_blue"/>
+        style="@style/edittext_blue"
+        android:id="@+id/edittext_login_signup" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/editText_pass_signIn"
+        android:layout_above="@+id/edittext_email_signup"
+        android:layout_marginLeft="4dp"
+        android:id="@+id/textview_email_signup"
+        style="@style/second_plan_text"
+        android:text="@string/email"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_above="@+id/textview_password_signup"
+        android:layout_marginBottom="7dp"
+        style="@style/edittext_blue"
+        android:id="@+id/edittext_email_signup"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/edittext_password_signup"
         android:layout_marginBottom="3dp"
         android:layout_marginLeft="4dp"
-        android:id="@+id/text_password_signin"
+        android:id="@+id/textview_password_signup"
         style="@style/second_plan_text"
         android:text="@string/password"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_above="@+id/text_forgot"
+        android:layout_above="@+id/textview_repassword_signup"
         android:layout_marginBottom="7dp"
-        android:id="@+id/editText_pass_signIn"
-        style="@style/edittext_blue"/>
+        style="@style/edittext_blue"
+        android:id="@+id/edittext_password_signup"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button_signin"
-        android:layout_marginBottom="15dp"
-        android:layout_alignParentRight="true"
-        android:id="@+id/text_forgot"
+        android:layout_above="@+id/edittext_repassword_signup"
+        android:layout_marginLeft="4dp"
+        android:id="@+id/textview_repassword_signup"
         style="@style/second_plan_text"
-        android:onClick="forgotPasswordClicked"
-        android:text="@string/forgot_password"/>
+        android:text="@string/repeat_password"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_above="@+id/button_signun_signup"
+        android:layout_marginBottom="20dp"
+        style="@style/edittext_blue"
+        android:id="@+id/edittext_repassword_signup"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_above="@+id/internal_relativelayout"
         android:layout_marginBottom="10dp"
-        android:id="@+id/button_signin"
+        android:id="@+id/button_signun_signup"
         style="@style/button_signin"
         android:gravity="center"
-        android:onClick="signInClicked"
-        android:text="@string/sign_in"
-        android:textStyle="bold"
-        android:textSize="15dp"/>
+        android:onClick="signUpClicked"
+        android:text="@string/sign_up"/>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -101,17 +123,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="2dp"
-            android:id="@+id/textview_newuser"
+            android:id="@+id/textview_already_have_account_signup"
             style="@style/second_plan_text"
-            android:text="@string/new_user"/>
+            android:text="@string/have_you_account"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/textview_newuser"
+            android:layout_toRightOf="@+id/textview_already_have_account_signup"
             android:layout_marginLeft="2dp"
             style="@style/second_plan__blue_text"
-            android:onClick="goToSignUpClicked"
-            android:text="@string/sign_up" />
+            android:onClick="goToSignInClicked"
+            android:text="@string/sign_in"/>
     </RelativeLayout>
+
 </RelativeLayout>
