--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:drawable="@color/colorWhite"/>
+    <item android:drawable="@drawable/white"
+        android:width="10000dp"
+        android:height="10000dp">
 
-    <item>
+    </item>
+
+    <item
+        android:width="144dp"
+        android:height="144dp"
+        android:gravity="center">
         <bitmap
-            android:gravity="center"
-            android:src="@drawable/ic_launcher"/>
+            android:gravity="fill_horizontal|fill_vertical"
+            android:src="@drawable/notes" />
     </item>
 
 </layer-list>
