--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -13,7 +13,7 @@
         android:gravity="center">
         <bitmap
             android:gravity="fill_horizontal|fill_vertical"
-            android:src="@drawable/notes" />
+            android:src="@drawable/ic_notes" />
     </item>
 
 </layer-list>
