--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -5,6 +5,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/notes_container"
+            android:orientation="vertical" />
+    </ScrollView>
+
+
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,5 +29,5 @@
         android:backgroundTint="@color/colorYellow"
         android:id="@+id/fab"
         app:borderWidth="0dp"
-        android:onClick="" />
+        android:onClick="fabClicked" />
 </RelativeLayout>
