--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,7 @@
     tools:context=".ActivityMain"
     android:theme="@style/BottomNavigationTheme">
 
-    <include
-        layout="@layout/main_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:layout_constraintTop_toTopOf="parent"/>
+    <include layout="@layout/main_container"/>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/nav_view"
