--- a/app/src/main/res/layout/main_container.xml
+++ b/app/src/main/res/layout/main_container.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<FrameLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ActivityMain"
-    tools:showIn="@layout/activity_main"
-    android:padding="1dp"
-    android:id="@+id/main_container">
-
-</LinearLayout>
+    android:id="@+id/main_container"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
