--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -14,7 +14,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/notes_container"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+            <android.support.v7.widget.RecyclerView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
     </ScrollView>
 
 
