--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,11 @@
     tools:context=".ActivityMain"
     android:theme="@style/BottomNavigationTheme">
 
-    <include layout="@layout/main_container"/>
+    <FrameLayout android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/main_container"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_marginBottom="56dp"/>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/nav_view"
