--- a/app/src/main/res/layout/layout_cardview.xml
+++ b/app/src/main/res/layout/layout_cardview.xml
@@ -4,12 +4,14 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:layout_margin="10dp"
-    app:cardElevation="0dp">
+    app:cardElevation="0dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="-1dp">
 
     <ImageView
         android:src="@drawable/cardview_backround"
@@ -20,38 +22,32 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorSeparator"
-        android:layout_marginBottom="5dp"/>
+        android:background="@color/colorSeparator" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="16dp" />
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/imageView"
-            android:text="Title"
-            android:textSize="30sp" />
+            style="@style/foreground_text"
+            android:textStyle="normal"
+            android:maxLines="1"
+
+            android:layout_alignParentTop="true"/>
 
         <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/second_plan_text"
+            android:textStyle="italic"
+            android:maxLines="3"
+
             android:layout_below="@+id/title"
-            android:layout_toRightOf="@+id/imageView"
-            android:text="Description" />
+            android:layout_marginTop="10dp"/>
 
     </RelativeLayout>
 
